[build-system]
requires = [ "setuptools >= 75.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "data_formulator"
version = "0.5.0.2"

requires-python = ">=3.9"
authors = [
  {name = "Chenglong Wang", email = "chenglong.wang@microsoft.com"},
  {name = "Dan Marshall", email = "danmar@microsoft.com"},
]
readme = "README.md"
license = "MIT"
description = "GDIS AI Agent is research protoype data visualization tool powered by AI."
keywords = ["data visualization", "LLM", "AI"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [  
    "jupyter",  
    "pandas",  
    "flask",  
    "flask-cors",  
    "openai",  
    "azure-identity",  
    "azure-kusto-data",
    "azure-keyvault-secrets",  
    "azure-storage-blob",
    "python-dotenv",  
    "vega_datasets",
    "litellm",
    "duckdb",
    "pyodbc",
    "numpy",                    
    "vl-convert-python", 
    "boto3",
    "backoff",
    "beautifulsoup4",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/xxx"
Repository = "https://github.com/xxx.git"
"Bug Tracker" = "https://github.com/xxx/issues"

[tool.setuptools]
package-dir = {"" = "py-src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["py-src"]
exclude = ["data_formulator.tests*"]

[tool.pytest.ini_options]
testpaths = ["py-src/data_formulator/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project.scripts]
data_formulator = "data_formulator:run_app"
