[build-system]
requires = [ "setuptools >= 75.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "data_formulator"
version = "0.8.0a1"

requires-python = ">=3.11"
authors = [
  {name = "Chenglong Wang", email = "chenglong.wang@microsoft.com"},
  {name = "Dan Marshall", email = "danmar@microsoft.com"},
]
readme = "README.md"
license = "MIT"
description = "Data Formulator is research protoype data visualization tool powered by AI."
keywords = ["data visualization", "LLM", "AI"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
    "pandas",
    "flask",
    "flask-cors",
    "flask-limiter",
    "openai",
    "python-dotenv",
    "litellm",
    "duckdb",
    "numpy",
    "vl-convert-python",
    "beautifulsoup4",
    "scikit-learn",
    "pyyaml",
    "pyarrow>=13.0.0",
    "xlrd",
    "openpyxl>=3.1.0",
    "lxml",                     # pandas.read_html web table extraction
    "yfinance",
    # Data-loader deps (all included by default; try/except keeps things safe)
    "pymongo",                  # mongodb
    "azure-cosmos",             # cosmosdb
    "azure-storage-blob",       # azure_blob
    "azure-identity",           # azure_blob, kusto
    "azure-kusto-data",         # kusto
    "azure-keyvault-secrets",   # kusto
    "pymysql",                  # mysql
    "pyodbc",                   # mssql
    "psycopg2-binary",          # postgresql
    "boto3",                    # s3, athena
    "google-cloud-bigquery",    # bigquery
    "google-auth",              # bigquery
    "db-dtypes",                # bigquery
    # SSO / Auth deps
    "PyJWT[crypto]>=2.8.0",     # OIDC JWT verification (includes cryptography)
    "requests",                 # GitHub OAuth code exchange, Superset API calls
    "flask-session>=0.8.0",     # Server-side session (SQLite) for TokenStore
]

[project.optional-dependencies]
# Headless-browser rendering for the data-loading agent's fetch_url(render=true).
# Needed for JavaScript single-page apps and pages behind a browser-verification
# challenge that a plain HTTP fetch cannot pass. After installing, also run:
#   python -m playwright install chromium
browser = ["playwright>=1.40"]

[project.urls]
Homepage = "https://github.com/microsoft/data-formulator"
Repository = "https://github.com/microsoft/data-formulator.git"
"Bug Tracker" = "https://github.com/microsoft/data-formulator/issues"

[tool.setuptools]
package-dir = {"" = "py-src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["py-src"]
include = ["data_formulator*"]

# Non-Python resources that must ship inside the installed package. The Azure
# build runs `pip install .` from a zip (no VCS), so include-package-data alone
# does not pick these up — declare them explicitly. Analyst skills load their
# `SKILL.md` body and `tools.json` schemas at runtime from the package dir.
# Scoped to the exact skill filenames so unrelated data JSON is not bundled.
[tool.setuptools.package-data]
"*" = ["SKILL.md", "tools.json"]

[project.scripts]
data_formulator = "data_formulator:run_app"

[tool.uv]
dev-dependencies = [
    "build",
    "pytest",
]
